--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ spring.application.name=sv70-2021-cloud-kolokvijum
 #spring.datasource.username=sv70-2021
 #spring.datasource.password=password123
 
-spring.datasource.url=jdbc:postgresql://database-1.cpce42ewqowr.eu-central-1.rds.amazonaws.com:5432/database1
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://database-1.cpce42ewqowr.eu-central-1.rds.amazonaws.com:5432/database1
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 
-#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
